--- a/css/utilities.css
+++ b/css/utilities.css
@@ -75,14 +75,20 @@
 }
 
 /* width */
+.w20{width: 20%;}
+.w25{width: 25%;}
+.w30{width: 30%;}
 .w40{width: 40%;}
+.w48{width: 48%;}
 .w50{width: 50%;}
 .w60{width: 60%;}
 .w80{width: 80%;}
 .w100{width: 100%;}
 
-.h100{height: 100%;}
-
+/* width height x immagini rotonde */
+.wh-150{width: 200px;
+height: 200px;}
 
 /* img */
 .cov{background-size: cover;}
+.con{background-size: contain;}
