--- a/css/utilities.css
+++ b/css/utilities.css
@@ -14,6 +14,10 @@
 .ai-bas{align-items: baseline;}
 .as-cen{align-self: center;}
 .as-fs{align-self: flex-start;}
+/* border */
+.bor-12{border-radius:12px;}
+.bor-30{border-radius: 30px;}
+.bor-c{border-radius: 50%;}
 /* padding / margin*/
 .p-8{padding: 8px;}
 .p-12{padding: 12px;}
@@ -35,13 +39,16 @@
 .pr-12{padding-right: 12px;}
 .pr-16{padding-right: 16px;}
 .po-12{padding: 0 12px;}
+.ma{margin: auto;}
 .mo-20{margin-left: 20px; margin-right: 20px;}
+.mb-20{margin-bottom: 20px;}
 .mb-30{margin-bottom: 30px;}
 .mb-60{margin-bottom: 60px;}
 .mb-160{margin-bottom: 160px;}
 .mt-30{margin-top: 30px ;}
 .mt-75{margin-top: 75px;}
 .mt-90{margin-top: 90px;}
+.ml-12{margin-left: 12px;}
 .ml-20{margin-left: 20px;}
 .mr-20{margin-right: 20px;}
 .pc1{padding: 20px 16px;}
@@ -52,6 +59,10 @@
 .c-blk{color: black;}
 .c-gry{color: grey  ;}
 .c-bl{color: blue;}
+.c-lm{color: lime;}
+.c-cs2{color: #9792E4;}
+.c-cs3{color: #7875ae;}
+.c-cs4{color: #0084fd;}
 .bg-cs1{background-color: #B5DDFF;}
 .bg-cs2{background-color: #9792E4;}
 .bg-bl{background-color: blue;}
@@ -61,9 +72,15 @@
 /* font */
 .txt-n{text-decoration: none;}
 .txt-cen{text-align: center;}
+.fs-80{font-size: 80px;}
+.fs-52{font-size: 52px;}
+.fs-46{font-size: 46px;}
 .fs-32{font-size: 32px;}
 .fs-24{font-size: 24px;}
 .fs-20{font-size: 20px;}
+.fs-18{font-size: 18px;}
+.fw-9{font-weight: 900;}
+.fw-4{font-weight: 400;}
 /* position */
 .rel{position: relative;}
 .abs{position: absolute;}
@@ -75,11 +92,14 @@
 }
 
 /* width */
+.w8{width: 8%;}
+.w10{width: 10%;}
+.w15{width: 15%;}
 .w20{width: 20%;}
 .w25{width: 25%;}
 .w30{width: 30%;}
 .w40{width: 40%;}
-.w48{width: 48%;}
+.w48{width: 48;}
 .w50{width: 50%;}
 .w60{width: 60%;}
 .w80{width: 80%;}
